--- a/RelatorioDiscador/Site.Master
+++ b/RelatorioDiscador/Site.Master
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - Meu aplicativo ASP.NET</title>
+    <title><%: Page.Title %> - Sercomtel Contact Center</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -39,7 +39,7 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar navbar-inverse navbar-fixed-top" style="background-color: #003399;">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -47,14 +47,18 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Nome do aplicativo</a>
+                    <!--<a class="navbar-brand" runat="server" href="~/">Nome do aplicativo</a>-->
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Página inicial</a></li>
-                        <li><a runat="server" href="~/About">Sobre</a></li>
-                        <li><a runat="server" href="~/Contact">Contato</a></li>
+                        <li><a runat="server" href="~/Default.aspx">Página inicial</a></li>
+                        <!--<li><a runat="server" href="~/Contact">Contato</a></li>
+                        <li><a runat="server" href="~/About">Sobre</a></li> -->
+                        <li><a runat="server" id="usuario" href="usuarios.aspx">Usuários</a></li>
                     </ul>
+                    <ul class="navbar-nav-right" style="text-align:right">              
+                      <li><a runat="server" ID="logout" Onclick="logout_click" class="nav user" href="~/login.aspx" style=""><asp:Label ID="Label1" runat="server" Text="Label"></asp:Label>&emsp;<span class="glyphicon glyphicon-off" style="color:white;font-size: 15px; aria-hidden="true"></span></a></li>
+                     </ul>
                 </div>
             </div>
         </div>
@@ -63,10 +67,25 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Meu aplicativo ASP.NET</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Sercomtel Contact Center</p>
             </footer>
         </div>
 
     </form>
+   <style>
+       
+        .navbar-inverse .navbar-nav > li > a {
+    color: #ffffff;
+    }
+        .navbar-inverse .navbar-nav > li > a:hover {
+    color: #9d9d9d;
+}
+        .navbar-inverse .navbar-nav > li > .logout{
+        text-align: right;
+        }
+        #Label1{
+            color:#ffffff;
+        }
+    </style>
 </body>
 </html>
